# Nice_Speak

./: .gitignore  DEVELOPMENT.md  OPENCLAW_RUST_REARCHITECTURE_PLAN.md
Document/: DEVELOPMENT_PLAN.md  README.md
admin/: ADMIN_DETAILED_PLAN.md
admin/web/: nuxt.config.ts  package.json
admin/web/stores/: auth.ts
backend/: .env.example  Cargo.toml  openapi.yaml
backend/migrations/: 001_devices.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/device/: mod.rs
deploy/k8s/admin-web/: deployment.yaml  (+1 more)
deploy/nginx/: learn.justit.cc.conf
frontend/: pubspec.yaml
manage/: ADMIN_ARCHITECTURE.md
manage/backend/: .env.example  API.md  Cargo.toml  Dockerfile  RBAC.md  README.md  TEST_PLAN.md
manage/backend/deploy/: deploy.sh  docker-compose.yml
manage/backend/deploy/nginx/: nginx.conf
manage/backend/src/: NiceSpeak.Admin.csproj  Program.cs  config.rs  lib.rs  main.rs
manage/backend/src/Controllers/: MenusController.cs  PermissionsController.cs  RolesController.cs  UsersController.cs
manage/backend/src/Data/: AdminDbContext.cs
manage/backend/src/Entities/: Menu.cs  Permission.cs  Role.cs  RoleMenu.cs  RolePermission.cs  User.cs  UserRole.cs
manage/backend/src/Models/Dtos/: MenuDto.cs  PermissionDto.cs  RoleDto.cs  UserDto.cs
manage/backend/src/Services/: MenuService.cs  PermissionService.cs  RoleService.cs  UserService.cs
manage/backend/src/analytics/: mod.rs
manage/backend/src/audit/: mod.rs
manage/backend/src/customers/: mod.rs
manage/backend/src/menus/: mod.rs
manage/backend/src/permissions/: mod.rs
manage/backend/src/roles/: mod.rs
manage/backend/src/scenarios/: mod.rs
manage/backend/src/settings/: mod.rs
manage/backend/src/subscriptions/: mod.rs
manage/backend/src/users/: mod.rs
manage/backend/tests/: test_api.sh  test_frontend.sh  test_performance.sh  test_security.sh
manage/web/: Dockerfile  app.vue  nginx.conf  nuxt.config.ts  openapi.yaml  package.json
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: api_service_test.dart  providers_test.dart
(+59 files in other folders)
