[package]
name = "nice_speak_backend"
version = "0.1.0"
edition = "2021"
description = "Nice Speak Backend API - Rust + Axum"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["cors", "validate-request"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
bcrypt = "1"
argon2 = "0.5"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Utils
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"

# Rate Limiting
governor = "0.5"

[dev-dependencies]
sqlx = { version = "0.7", features = ["sqlite", "uuid", "chrono"] }
tower = { version = "0.4", features = ["test-util"] }
http = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
